--- a/template/php-cli.template
+++ b/template/php-cli.template
@@ -1,3 +1,3 @@
 #!/bin/sh
 
-docker run --rm -it -w=/app -v $(pwd):/app jestefane/php-dev:%%PHP_VERSION%%-cli-%%IMAGE_VERSION%% $@
+docker run --rm -it -w=/app -v "$(pwd)":/app jestefane/php-dev:%%PHP_VERSION%%-cli-%%SOURCE_BRANCH%% "$@"
