--- a/template/composer.template
+++ b/template/composer.template
@@ -1,3 +1,3 @@
-#!/bin/sh
+#!/usr/bin/env bash
 
 docker run --rm -it -w=/app -v "$(pwd)":/app -v ~/.ssh:/root/.ssh -v "$HOME/.composer-docker":/root/.composer jestefane/php-dev:%%PHP_VERSION%%-cli-%%SOURCE_BRANCH%% composer "$@"
