--- a/template/php-cli.template
+++ b/template/php-cli.template
@@ -1,3 +1,3 @@
-#!/bin/sh
+#!/usr/bin/env bash
 
-docker run --rm -it -w=/app -v "$(pwd)":/app jestefane/php-dev:%%PHP_VERSION%%-cli-%%SOURCE_BRANCH%% "$@"
+docker run --rm -it -w=/app -v "$(pwd)":/app jestefane/php-dev:%%PHP_VERSION%%-%%PHP_VARIANT%%-%%SOURCE_BRANCH%% "$@"
