--- a/template/php.template
+++ b/template/php.template
@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-docker run --rm -it -w=/app -v "$(pwd)":/app jestefane/php-dev:%%PHP_VERSION%%-%%PHP_VARIANT%%-%%SOURCE_BRANCH%% "$@"
+docker run --rm -it -w=/app -v "$(pwd)":/app jestefane/php-dev:%%PHP_VERSION%%-%%PHP_VARIANT%% "$@"
